# internal/admin/api/oas_validators_gen.go
@@ -401,6 +401,36 @@ func (s *ForgetMergeRequest) Validate() error {
 	return nil
 }
 
+func (s *ForgetRunReq) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if value, ok := s.SimilarityThreshold.Get(); ok {
+			if err := func() error {
+				if err := (validate.Float{}).Validate(float64(value)); err != nil {
+					return errors.Wrap(err, "float")
+				}
+				return nil
+			}(); err != nil {
+				return err
+			}
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "similarity_threshold",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *GuildsChannelsOK) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
